<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_gravity="center"
        android:id="@+id/homelay3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homelay1"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/btbannerlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >


                <LinearLayout
                    android:gravity="center"
                    android:id="@+id/lay12"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <Button
                        android:background="@null"
                        android:drawableTop="@drawable/scan_bt"
                        android:textSize="24sp"
                        android:id="@+id/scanbt_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Scan BT Devices"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/mainlay"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="vertical"
        android:scrollbars="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/actMain_ll_device_ctrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dip"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/actMain_link_device_info_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/actMain_tv_device_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/actMain_device_info"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000" />
            </LinearLayout>

            <!-- 配对与连接处理 -->

            <LinearLayout
                android:id="@+id/actMain_ll_pair_or_comm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="horizontal"
                android:padding="5dp" >

                <Button
                    android:id="@+id/actMain_btn_pair"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClickBtnPair"
                    android:text="@string/actMain_btn_pair" />

                <Button
                    android:id="@+id/actMain_btn_conn"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClickBtnConn"
                    android:text="@string/actMain_btn_comm"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/actMain_ll_pair_or_comm1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="horizontal"
                android:padding="5dp" >

                <Button
                    android:id="@+id/btn_Exit"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Exit" />
            </LinearLayout>
            <!-- Start selection mode -->

            <LinearLayout
                android:id="@+id/actMain_ll_choose_mode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>