<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/inau_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset">

        <LinearLayout
            android:id="@+id/linr_cntr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical|center"
            android:orientation="vertical"
            android:padding="5dp">

            <TableLayout
                android:id="@+id/tbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingEnd="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingStart="15dp"
                android:stretchColumns="2">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="243dp"
                        android:layout_height="wrap_content"
                        android:text="@string/physical_house" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text=" : " />

                    <LinearLayout
                        android:id="@+id/linr_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <!--<CheckBox-->
                            <!--android:id="@+id/cb_one"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="38dp"-->
                            <!--android:spinnerMode="dropdown" />-->

                    </LinearLayout>
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="243dp"
                        android:layout_height="wrap_content"
                        android:text="@string/verification_of" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text=" : " />

                    <LinearLayout
                        android:id="@+id/linr_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center"
                        android:orientation="vertical"
                        android:padding="5dp">

                    </LinearLayout>
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="243dp"
                        android:layout_height="wrap_content"
                        android:text="@string/purpose_of" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text=" : " />

                    <LinearLayout
                        android:id="@+id/linr_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center"
                        android:orientation="vertical"
                        android:padding="5dp">

                    </LinearLayout>
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="243dp"
                        android:layout_height="wrap_content"
                        android:text="@string/occupation" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text=" : " />

                    <LinearLayout
                        android:id="@+id/linr_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center"
                        android:orientation="vertical"
                        android:padding="5dp">

                    </LinearLayout>
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="243dp"
                        android:layout_height="wrap_content"
                        android:text="@string/group_guarantee" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text=" : " />

                    <LinearLayout
                        android:id="@+id/linr_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center"
                        android:orientation="vertical"
                        android:padding="5dp">

                    </LinearLayout>
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="243dp"
                        android:layout_height="wrap_content"
                        android:text="@string/outside_borrowings" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text=" : " />

                    <LinearLayout
                        android:id="@+id/linr_6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center"
                        android:orientation="vertical"
                        android:padding="5dp">

                    </LinearLayout>
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/view_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/btn_pre_three"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/btn_hv_pre"
        style="@style/RbButton.Inverse.Rounded.LightBlue"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="right|bottom"
        android:layout_marginTop="5dp"
        android:text=" PREV. "
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_hv_submit"
        style="@style/RbButton.Inverse.Rounded.Green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="right|bottom"
        android:layout_marginTop="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text=" SUBMIT "
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>